ping-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-app
  template:
    metadata:
      labels:
        app: ping-app
    spec:
      containers:
      - name: ping-app
        image: local-ping-app:DEV-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6060
        - containerPort: 6061
