ping-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ping-app-deployment
                port:
                  number: 6060
